--- a/turbo.json
+++ b/turbo.json
@@ -1,6 +1,8 @@
 {
   "$schema": "https://turborepo.com/schema.json",
   "ui": "tui",
+  "globalEnv": ["NODE_ENV"],
+  "globalDependencies": [".env"],
   "tasks": {
     "test": {
 			"dependsOn": ["^test"]
