--- a/apps/server-example/package.json
+++ b/apps/server-example/package.json
@@ -12,14 +12,13 @@
     "start:binary": "./server",
     "lint": "eslint . --max-warnings 0",
     "lint:fix": "eslint . --fix",
-    "check-types": "tsc --noEmit"
+    "type:check": "tsc --noEmit"
   },
   "dependencies": {
     "elysia": "latest"
   },
   "devDependencies": {
-    "bun-types": "latest",
-    "@workspace/eslint-config": "workspace:*"
+    "bun-types": "latest"
   },
   "module": "src/index.js"
 }
