--- a/apps/web-example/package.json
+++ b/apps/web-example/package.json
@@ -10,7 +10,7 @@
     "start": "next start",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
-    "check-types": "tsc --noEmit"
+    "type:check": "tsc --noEmit"
   },
   "dependencies": {
     "@workspace/ui": "workspace:*",
@@ -23,8 +23,6 @@
   "devDependencies": {
     "@types/node": "^24.5.2",
     "@types/react": "19.1.14",
-    "@types/react-dom": "19.1.9",
-    "@workspace/eslint-config": "workspace:^",
-    "@workspace/typescript-config": "workspace:*"
+    "@types/react-dom": "19.1.9"
   }
 }
