--- a/package.json
+++ b/package.json
@@ -1,14 +1,15 @@
 {
   "name": "asapreverse",
+  "type": "module",
   "private": true,
   "scripts": {
     "build": "turbo run build",
     "dev": "turbo run dev",
     "lint": "turbo run lint",
+    "type:check": "turbo run type:check",
+    "test": "turbo test",
     "format:check": "prettier --check \"**/*.{ts,tsx,js,jsx,json,md}\"",
-    "format:write": "prettier --write \"**/*.{ts,tsx,js,jsx,json,md}\"",
-    "check-types": "turbo run check-types",
-    "test": "turbo test"
+    "format:write": "prettier --write \"**/*.{ts,tsx,js,jsx,json,md}\""
   },
   "dependencies": {
     "@types/node": "^24.5.2",
@@ -17,12 +18,12 @@
   },
   "devDependencies": {
     "@faker-js/faker": "^9.8.0",
+    "@ianvs/prettier-plugin-sort-imports": "^4.7.0",
     "@workspace/eslint-config": "workspace:*",
     "@workspace/typescript-config": "workspace:*",
     "eslint": "^9.36.0",
     "prettier": "^3.6.2",
     "prettier-plugin-nginx": "^1.0.3",
-    "prettier-plugin-organize-imports": "^4.3.0",
     "prettier-plugin-packagejson": "^2.5.19",
     "prettier-plugin-sh": "^0.18.0",
     "prettier-plugin-sql": "^0.19.2",
@@ -33,7 +34,7 @@
   "engines": {
     "node": ">=22"
   },
-  "packageManager": "bun@1.2.8",
+  "packageManager": "pnpm@10.17.1",
   "workspaces": [
     "apps/*",
     "packages/*"
