--- a/apps/server-example/Dockerfile
+++ b/apps/server-example/Dockerfile
@@ -2,13 +2,17 @@ FROM oven/bun:1 AS build
 
 WORKDIR /app
 
-# Cache packages installation
+# Cache packages
 COPY package.json package.json
 COPY bun.lock bun.lock
 
+COPY /apps/server-example/package.json ./apps/server-example/package.json
+# COPY /packages/<package>/package.json ./packages/<package>/package.json
+
 RUN bun install
 
-COPY ./src ./src
+COPY /apps/server-example ./apps/server-example
+# COPY /packages/<package> ./packages/<package>
 
 ENV NODE_ENV=production
 
@@ -16,6 +20,7 @@ RUN bun build \
 	--compile \
 	--minify-whitespace \
 	--minify-syntax \
+	--target bun \
 	--outfile server \
 	src/index.ts
 
