--- a/apps/web-example/package.json
+++ b/apps/web-example/package.json
@@ -5,9 +5,9 @@
   "private": true,
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "next dev --turbopack --port 3001",
+    "dev": "next dev --turbopack -p 3001",
     "build": "next build",
-    "start": "next start",
+    "start": "next start -p 3001",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
     "type:check": "tsc --noEmit"
