--- a/apps/server-example/package.json
+++ b/apps/server-example/package.json
@@ -1,23 +1,23 @@
 {
-  "name": "server-example",
-  "version": "0.1.0",
-  "type": "module",
-  "private": true,
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "bun run --watch src/index.ts",
-    "build": "bun build --compile --minify-whitespace --minify-syntax --target bun --outfile ./dist/server src/index.ts",
-    "build:linux": "bun build --compile --minify-whitespace --minify-syntax --target bun-linux-x64 --outfile ./dist/server src/index.ts",
-    "start": "./dist/server",
-    "lint": "eslint . --max-warnings 0",
-    "lint:fix": "eslint . --fix",
-    "type:check": "tsc --noEmit"
-  },
-  "dependencies": {
-    "elysia": "latest"
-  },
-  "devDependencies": {
-    "bun-types": "latest"
-  },
-  "module": "src/index.js"
+	"name": "server-example",
+	"version": "0.1.0",
+	"private": true,
+	"type": "module",
+	"module": "src/index.js",
+	"scripts": {
+		"build": "bun build --compile --minify-whitespace --minify-syntax --target bun --outfile ./dist/server src/index.ts",
+		"build:linux": "bun build --compile --minify-whitespace --minify-syntax --target bun-linux-x64 --outfile ./dist/server src/index.ts",
+		"dev": "bun run --watch src/index.ts",
+		"lint": "eslint . --max-warnings 0",
+		"lint:fix": "eslint . --fix",
+		"start": "./dist/server",
+		"test": "echo \"Error: no test specified\" && exit 1",
+		"type:check": "tsc --noEmit"
+	},
+	"dependencies": {
+		"elysia": "latest"
+	},
+	"devDependencies": {
+		"bun-types": "latest"
+	}
 }
