--- a/apps/web-example/tsconfig.json
+++ b/apps/web-example/tsconfig.json
@@ -1,25 +1,17 @@
 {
-  "extends": "@workspace/typescript-config/nextjs.json",
-  "compilerOptions": {
-    "baseUrl": ".",
+	"extends": "@workspace/typescript-config/nextjs.json",
+	"compilerOptions": {
+		"baseUrl": ".",
 		"paths": {
 			"@/*": ["./*"],
-      "@workspace/ui/*": ["../packages/ui/src/*"]
+			"@workspace/ui/*": ["../packages/ui/src/*"]
 		},
-    "plugins": [
-      {
-        "name": "next"
-      }
-    ]
-  },
-  "include": [
-    "**/*.ts",
-    "**/*.tsx",
-    "next-env.d.ts",
-    "next.config.js",
-    ".next/types/**/*.ts"
-  ],
-  "exclude": [
-    "node_modules"
-  ]
+		"plugins": [
+			{
+				"name": "next"
+			}
+		]
+	},
+	"include": ["**/*.ts", "**/*.tsx", "next-env.d.ts", "next.config.js", ".next/types/**/*.ts"],
+	"exclude": ["node_modules"]
 }
