--- a/apps/server-example/package.json
+++ b/apps/server-example/package.json
@@ -8,11 +8,12 @@
 		"build": "bun build --compile --minify-whitespace --minify-syntax --target bun --outfile ./dist/server src/index.ts",
 		"build:linux": "bun build --compile --minify-whitespace --minify-syntax --target bun-linux-x64 --outfile ./dist/server src/index.ts",
 		"dev": "bun run --watch src/index.ts",
-		"lint": "eslint . --max-warnings 0",
+		"lint": "eslint .",
 		"lint:fix": "eslint . --fix",
 		"start": "./dist/server",
 		"test": "echo \"Error: no test specified\" && exit 1",
-		"type:check": "tsc --noEmit"
+		"type:check": "tsc --noEmit",
+		"clean": "rm -rf dist .turbo node_modules"
 	},
 	"dependencies": {
 		"elysia": "latest"
