--- a/apps/web-example/package.json
+++ b/apps/web-example/package.json
@@ -10,11 +10,12 @@
 		"lint:fix": "eslint . --fix",
 		"start": "next start -p 3001",
 		"test": "echo \"Error: no test specified\" && exit 1",
-		"type:check": "tsc --noEmit"
+		"type:check": "tsc --noEmit",
+		"clean": "rm -rf .next .turbo node_modules"
 	},
 	"dependencies": {
 		"@workspace/ui": "workspace:*",
-		"lucide-react": "^0.475.0",
+		"lucide-react": "^0.544.0",
 		"next": "^15.5.4",
 		"next-themes": "^0.4.6",
 		"react": "^19.1.1",
