--- a/packages/eslint-config/package.json
+++ b/packages/eslint-config/package.json
@@ -3,20 +3,24 @@
 	"version": "0.0.0",
 	"private": true,
 	"type": "module",
+	"scripts": {
+		"clean": "rm -rf .turbo node_modules"
+	},
 	"exports": {
 		"./base": "./base.js",
 		"./next-js": "./next.js",
-		"./react-internal": "./react-internal.js"
+		"./react-internal": "./react-internal.js",
+		"./react": "./react.js"
 	},
 	"devDependencies": {
-		"@eslint/js": "^9.34.0",
-		"@next/eslint-plugin-next": "^15.5.0",
-		"eslint-config-prettier": "^10.1.1",
+		"@eslint/js": "^9.36.0",
+		"@next/eslint-plugin-next": "^15.5.4",
+		"eslint-config-prettier": "^10.1.8",
 		"eslint-plugin-only-warn": "^1.1.0",
 		"eslint-plugin-react": "^7.37.5",
 		"eslint-plugin-react-hooks": "^5.2.0",
-		"eslint-plugin-turbo": "^2.5.0",
-		"globals": "^16.3.0",
-		"typescript-eslint": "^8.40.0"
+		"eslint-plugin-turbo": "^2.5.8",
+		"globals": "^16.4.0",
+		"typescript-eslint": "^8.44.1"
 	}
 }
