--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -11,30 +11,31 @@
 		"./hooks/*": "./src/hooks/*.ts"
 	},
 	"scripts": {
-		"lint": "eslint . --max-warnings 0",
+		"lint": "eslint .",
 		"lint:fix": "eslint . --fix",
-		"type:check": "tsc --noEmit"
+		"type:check": "tsc --noEmit",
+		"clean": "rm -rf .turbo node_modules"
 	},
 	"dependencies": {
 		"@radix-ui/react-slot": "^1.2.3",
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
-		"lucide-react": "^0.475.0",
+		"lucide-react": "^0.544.0",
 		"next-themes": "^0.4.6",
 		"react": "^19.1.1",
 		"react-dom": "^19.1.1",
 		"tailwind-merge": "^3.3.1",
-		"tw-animate-css": "^1.3.6",
-		"zod": "^3.25.76"
+		"tw-animate-css": "^1.4.0",
+		"zod": "^4.1.11"
 	},
 	"devDependencies": {
-		"@tailwindcss/postcss": "^4.1.11",
-		"@turbo/gen": "^2.5.5",
-		"@types/node": "^20.19.9",
-		"@types/react": "^19.1.9",
-		"@types/react-dom": "^19.1.7",
+		"@tailwindcss/postcss": "^4.1.13",
+		"@turbo/gen": "^2.5.8",
+		"@types/node": "^24.5.2",
+		"@types/react": "^19.1.14",
+		"@types/react-dom": "^19.1.9",
 		"@workspace/eslint-config": "workspace:*",
 		"@workspace/typescript-config": "workspace:*",
-		"tailwindcss": "^4.1.11"
+		"tailwindcss": "^4.1.13"
 	}
 }
