--- a/turbo.json
+++ b/turbo.json
@@ -19,7 +19,7 @@
 		"start": {
 			"cache": false,
 			"persistent": true,
-			"dependsOn": ["build", "^build"]
+			"dependsOn": ["^build", "build"]
 		},
 		"lint": {},
 		"type:check": {},
