Add OpenFGA service to docker-compose; update Keycloak port and healthcheck intervals for PostgreSQL, RabbitMQ, and Redis

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,7 @@ include:
   - infra/rabbitmq.yml
   - infra/keycloak.yml
   - infra/redis.yml
+  - infra/openfga.yml
 
 # Main application services can be defined here
 # The infrastructure services are included from their respective directories
