Update dependencies for RabbitMQ integration; add amqplib and amqp-connection-manager; bump elysia and @types/bun versions; remove pdf-converter job and related files.

--- a/apps/server-example/package.json
+++ b/apps/server-example/package.json
@@ -16,9 +16,12 @@
 		"clean": "rm -rf dist .turbo node_modules"
 	},
 	"dependencies": {
+		"amqplib": "^0.10.9",
 		"elysia": "latest"
 	},
 	"devDependencies": {
-		"@types/bun": "latest"
+		"@types/amqplib": "^0.10.7",
+		"@types/bun": "latest",
+		"amqp-connection-manager": "^5.0.0"
 	}
 }
