Refactor job-example to utilize workspace-based event handling; replace RabbitMQ service with event bus implementation, update event handler structure, and enhance TypeScript type definitions.

--- a/jobs/job-example/package.json
+++ b/jobs/job-example/package.json
@@ -16,6 +16,8 @@
 		"clean": "rm -rf dist .turbo node_modules"
 	},
 	"dependencies": {
+		"@workspace/event-bus": "workspace:*",
+		"@workspace/events": "workspace:*",
 		"amqp-connection-manager": "^5.0.0",
 		"amqplib": "^0.10.9"
 	},
