--- a/jobs/job-example/tsconfig.json
+++ b/jobs/job-example/tsconfig.json
@@ -3,7 +3,12 @@
 	"compilerOptions": {
 		"outDir": "dist",
 		"noEmit": true,
-		"allowImportingTsExtensions": true
+        "allowImportingTsExtensions": true,
+        "baseUrl": ".",
+        "paths": {
+            "@workspace/events": ["../../packages/events/src"],
+            "@workspace/event-bus": ["../../packages/event-bus/src"]
+        }
 	},
 	"include": ["src"],
 	"exclude": ["dist"]
