Refactor job examples to replace event-bus with pub-sub implementation; update dependencies and configurations in package.json and tsconfig.json files; remove obsolete event handler files and streamline event handling logic.

--- a/jobs/payment-example/package.json
+++ b/jobs/payment-example/package.json
@@ -16,8 +16,7 @@
 		"clean": "rm -rf dist .turbo node_modules"
 	},
 	"dependencies": {
-		"@workspace/event-bus": "workspace:*",
-		"@workspace/events": "workspace:*"
+		"@workspace/pub-sub": "workspace:*"
 	},
 	"devDependencies": {
 		"@types/bun": "latest"
