--- a/packages/pub-sub/package.json
+++ b/packages/pub-sub/package.json
@@ -1,7 +1,7 @@
 {
-	"name": "@workspace/event-bus",
+	"name": "@workspace/pub-sub",
 	"version": "0.1.0",
-	"private": false,
+	"private": true,
 	"type": "module",
 	"main": "./dist/index.js",
 	"types": "./dist/index.d.ts",
@@ -13,7 +13,6 @@
 		"type:check": "tsc -p tsconfig.json --noEmit"
 	},
 	"dependencies": {
-		"@workspace/events": "workspace:*",
 		"amqp-connection-manager": "^5.0.0",
 		"amqplib": "^0.10.9"
 	},
@@ -21,7 +20,6 @@
 		"@types/amqplib": "^0.10.7"
 	},
 	"peerDependencies": {
-		"@workspace/events": "*",
 		"typescript": "*"
 	}
 }
