--- a/packages/pub-sub/tsconfig.json
+++ b/packages/pub-sub/tsconfig.json
@@ -2,10 +2,7 @@
 	"extends": "@workspace/typescript-config/base.json",
 	"compilerOptions": {
 		"outDir": "dist",
-		"baseUrl": ".",
-		"paths": {
-			"@workspace/events": ["../events/src"]
-		}
+		"baseUrl": "."
 	},
 	"include": ["src/**/*"],
 	"exclude": ["node_modules", "dist"]
