Refactor job examples to replace pub-sub implementation with rabbitmq-helper; update package.json and tsconfig.json dependencies accordingly. Remove obsolete email-example files and streamline order and payment job examples by simplifying service initialization and removing unnecessary logic.

--- a/jobs/notifications-example/tsconfig.json
+++ b/jobs/notifications-example/tsconfig.json
@@ -6,7 +6,7 @@
 		"allowImportingTsExtensions": true,
 		"baseUrl": ".",
 		"paths": {
-			"@workspace/pub-sub": ["../../packages/pub-sub/src"]
+			"@workspace/rabbitmq-helper": ["../../packages/rabbitmq-helper/src"]
 		}
 	},
 	"include": ["src"],
