--- a/jobs/publisher-example/tsconfig.json
+++ b/jobs/publisher-example/tsconfig.json
@@ -5,7 +5,7 @@
 		"noEmit": true,
 		"baseUrl": ".",
 		"paths": {
-			"@workspace/pub-sub": ["../../packages/pub-sub/src"]
+			"@workspace/rabbitmq-helper": ["../../packages/rabbitmq-helper/src"]
 		}
 	},
 	"include": ["src"],
