--- a/jobs/order-example/package.json
+++ b/jobs/order-example/package.json
@@ -16,7 +16,7 @@
 		"clean": "rm -rf dist .turbo node_modules"
 	},
 	"dependencies": {
-		"@workspace/pub-sub": "workspace:*"
+		"@workspace/rabbitmq-helper": "workspace:*"
 	},
 	"devDependencies": {
 		"@types/bun": "latest"
