Refactor job examples to utilize rabbitmq-helper for event handling; update dependencies in package.json, streamline service initialization, and enhance type safety. Remove obsolete event handler files and simplify event processing logic across notifications, order, and payment jobs.

--- a/jobs/notifications-example/package.json
+++ b/jobs/notifications-example/package.json
@@ -16,7 +16,8 @@
 		"clean": "rm -rf dist .turbo node_modules"
 	},
 	"dependencies": {
-		"@workspace/rabbitmq-helper": "workspace:*"
+		"@workspace/rabbitmq-helper": "workspace:*",
+		"@workspace/shared": "workspace:*"
 	},
 	"devDependencies": {
 		"@types/bun": "latest"
