Refactor job examples to replace rabbitmq-helper with amqp-orm for event handling; update dependencies in package.json and tsconfig.json, streamline service initialization, and enhance type safety. Remove obsolete rabbitmq-helper package and update shared contract to utilize amqp-orm types.

--- a/jobs/notifications-example/package.json
+++ b/jobs/notifications-example/package.json
@@ -16,7 +16,7 @@
 		"clean": "rm -rf dist .turbo node_modules"
 	},
 	"dependencies": {
-		"@workspace/rabbitmq-helper": "workspace:*",
+		"@workspace/amqp-orm": "workspace:*",
 		"@workspace/shared": "workspace:*"
 	},
 	"devDependencies": {
