--- a/packages/amqp-orm/package.json
+++ b/packages/amqp-orm/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "@workspace/rabbitmq-helper",
+	"name": "@workspace/amqp-orm",
 	"version": "0.1.0",
 	"private": true,
 	"type": "module",
