--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -4,7 +4,11 @@
 	"private": true,
 	"type": "module",
 	"exports": {
-		".": "./src/index.ts"
+		".": "./src/index.ts",
+		"./amqp-contract": "./src/amqp-contract.ts"
+	},
+	"dependencies": {
+		"@workspace/amqp-orm": "workspace:*"
 	},
 	"scripts": {
 		"build": "tsc -p tsconfig.json",
