--- a/packages/amqp-orm/package.json
+++ b/packages/amqp-orm/package.json
@@ -20,7 +20,8 @@
 	},
 	"dependencies": {
 		"amqp-connection-manager": "^5.0.0",
-		"amqplib": "^0.10.9"
+		"amqplib": "^0.10.9",
+		"zod": "^4.1.11"
 	},
 	"devDependencies": {
 		"@types/amqplib": "^0.10.7"
