--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -8,7 +8,8 @@
 		"./amqp-contract": "./src/amqp-contract.ts"
 	},
 	"dependencies": {
-		"@workspace/amqp-orm": "workspace:*"
+		"@workspace/amqp-orm": "workspace:*",
+		"zod": "^4.1.11"
 	},
 	"scripts": {
 		"build": "tsc -p tsconfig.json",
