Refactor job examples to remove amqp-orm dependency; replace with rascal for event handling across notifications, order, payment, and promo jobs. Update package.json and tsconfig.json files accordingly, and remove obsolete event handler files to streamline service initialization and enhance clarity.

--- a/jobs/notifications-example/package.json
+++ b/jobs/notifications-example/package.json
@@ -16,10 +16,11 @@
 		"clean": "rm -rf dist .turbo node_modules"
 	},
 	"dependencies": {
-		"@workspace/amqp-orm": "workspace:*",
-		"@workspace/shared": "workspace:*"
+		"@workspace/shared": "workspace:*",
+		"rascal": "^20.1.1"
 	},
 	"devDependencies": {
+		"@types/rascal": "^10.2.1",
 		"@types/bun": "latest"
 	}
 }
