--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -4,12 +4,7 @@
 	"private": true,
 	"type": "module",
 	"exports": {
-		".": "./src/index.ts",
-		"./amqp-contract": "./src/amqp-contract.ts"
-	},
-	"dependencies": {
-		"@workspace/amqp-orm": "workspace:*",
-		"zod": "^4.1.11"
+		".": "./src/index.ts"
 	},
 	"scripts": {
 		"build": "tsc -p tsconfig.json",
