Refactor job examples to replace rascal with amqp-connection-manager and amqplib for event handling; update package.json files across notifications, order, payment, promo, and publisher jobs. Remove obsolete rascal configuration files to streamline service initialization and enhance clarity.

--- a/jobs/notifications-example/package.json
+++ b/jobs/notifications-example/package.json
@@ -17,10 +17,11 @@
 	},
 	"dependencies": {
 		"@workspace/shared": "workspace:*",
-		"rascal": "^20.1.1"
+		"amqp-connection-manager": "^5.0.0",
+		"amqplib": "^0.10.9"
 	},
 	"devDependencies": {
-		"@types/rascal": "^10.2.1",
+		"@types/amqplib": "^0.10.7",
 		"@types/bun": "latest"
 	}
 }
