Add Zod dependency to job examples and update package.json files; enhance event handling in notifications, order, payment, and publisher jobs. Remove obsolete promo example files to streamline project structure and improve clarity.

--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -4,7 +4,14 @@
 	"private": true,
 	"type": "module",
 	"exports": {
-		".": "./src/index.ts"
+		".": "./src/index.ts",
+		"./events": "./src/events.ts"
+	},
+	"peerDependencies": {
+		"zod": "^4.1.11"
+	},
+	"devDependencies": {
+		"zod": "^4.1.11"
 	},
 	"scripts": {
 		"build": "tsc -p tsconfig.json",
