--- a/jobs/order-example/package.json
+++ b/jobs/order-example/package.json
@@ -18,7 +18,8 @@
 	"dependencies": {
 		"@workspace/shared": "workspace:*",
 		"amqp-connection-manager": "^5.0.0",
-		"amqplib": "^0.10.9"
+		"amqplib": "^0.10.9",
+		"zod": "^4.1.11"
 	},
 	"devDependencies": {
 		"@types/amqplib": "^0.10.7",
