Update package.json files to use catalog references for dependencies; standardize versions across applications and jobs, including React, React DOM, and TypeScript types. Enhance consistency in dependency management across the project.

--- a/apps/server-example/package.json
+++ b/apps/server-example/package.json
@@ -16,12 +16,9 @@
 		"clean": "rm -rf dist .turbo node_modules"
 	},
 	"dependencies": {
-		"amqplib": "^0.10.9",
-		"elysia": "latest"
+		"elysia": "catalog:"
 	},
 	"devDependencies": {
-		"@types/amqplib": "^0.10.7",
-		"@types/bun": "latest",
-		"amqp-connection-manager": "^5.0.0"
+		"@types/bun": "catalog:"
 	}
 }
