--- a/package.json
+++ b/package.json
@@ -18,9 +18,9 @@
 		"clean": "turbo run clean && rm -rf .turbo node_modules"
 	},
 	"dependencies": {
-		"@types/node": "^24.5.2",
-		"@types/react": "^19.1.14",
-		"@types/react-dom": "^19.1.9"
+		"@types/node": "catalog:",
+		"@types/react": "catalog:",
+		"@types/react-dom": "catalog:"
 	},
 	"devDependencies": {
 		"@faker-js/faker": "^10.0.0",
