--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -8,10 +8,10 @@
 		"./events": "./src/events.ts"
 	},
 	"peerDependencies": {
-		"zod": "^4.1.11"
+		"zod": "catalog:"
 	},
 	"devDependencies": {
-		"zod": "^4.1.11"
+		"zod": "catalog:"
 	},
 	"scripts": {
 		"build": "tsc -p tsconfig.json",
