--- a/apps/web-example/package.json
+++ b/apps/web-example/package.json
@@ -16,14 +16,14 @@
 	"dependencies": {
 		"@workspace/ui": "workspace:*",
 		"lucide-react": "^0.544.0",
-		"next": "^15.5.4",
+		"next": "catalog:",
 		"next-themes": "^0.4.6",
-		"react": "^19.1.1",
-		"react-dom": "^19.1.1"
+		"react": "catalog:",
+		"react-dom": "catalog:"
 	},
 	"devDependencies": {
-		"@types/node": "^24.5.2",
-		"@types/react": "19.1.14",
-		"@types/react-dom": "19.1.9"
+		"@types/node": "catalog:",
+		"@types/react": "catalog:",
+		"@types/react-dom": "catalog:"
 	}
 }
