--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -22,18 +22,18 @@
 		"clsx": "^2.1.1",
 		"lucide-react": "^0.544.0",
 		"next-themes": "^0.4.6",
-		"react": "^19.1.1",
-		"react-dom": "^19.1.1",
+		"react": "catalog:",
+		"react-dom": "catalog:",
 		"tailwind-merge": "^3.3.1",
 		"tw-animate-css": "^1.4.0",
-		"zod": "^4.1.11"
+		"zod": "catalog:"
 	},
 	"devDependencies": {
 		"@tailwindcss/postcss": "^4.1.13",
 		"@turbo/gen": "^2.5.8",
-		"@types/node": "^24.5.2",
-		"@types/react": "^19.1.14",
-		"@types/react-dom": "^19.1.9",
+		"@types/node": "catalog:",
+		"@types/react": "catalog:",
+		"@types/react-dom": "catalog:",
 		"@workspace/eslint-config": "workspace:*",
 		"@workspace/typescript-config": "workspace:*",
 		"tailwindcss": "^4.1.13"
