--- a/apps/server-example/tsconfig.json
+++ b/apps/server-example/tsconfig.json
@@ -3,7 +3,11 @@
 	"compilerOptions": {
 		"outDir": "dist",
 		"noEmit": true,
-		"allowImportingTsExtensions": true
+		"allowImportingTsExtensions": true,
+		"paths": {
+			"~/*": ["./*"],
+			"@/*": ["./src/*"]
+		}
 	},
 	"include": ["src"],
 	"exclude": ["dist"]
