--- a/apps/web-example/package.json
+++ b/apps/web-example/package.json
@@ -14,6 +14,7 @@
 		"clean": "rm -rf .next .turbo node_modules"
 	},
 	"dependencies": {
+		"@tanstack/react-query": "^5.90.2",
 		"@workspace/ui": "workspace:*",
 		"lucide-react": "^0.544.0",
 		"next": "catalog:",
