--- a/apps/web-example/tsconfig.json
+++ b/apps/web-example/tsconfig.json
@@ -3,7 +3,8 @@
 	"compilerOptions": {
 		"baseUrl": ".",
 		"paths": {
-			"@/*": ["./*"],
+			"~/*": ["./*"],
+			"@/*": ["./src/*"],
 			"@workspace/ui/*": ["../packages/ui/src/*"]
 		},
 		"plugins": [
