--- a/packages/eslint-config/package.json
+++ b/packages/eslint-config/package.json
@@ -15,6 +15,7 @@
 	"devDependencies": {
 		"@eslint/js": "^9.36.0",
 		"@next/eslint-plugin-next": "^15.5.4",
+		"@tanstack/eslint-plugin-query": "^5.91.0",
 		"eslint-config-prettier": "^10.1.8",
 		"eslint-plugin-only-warn": "^1.1.0",
 		"eslint-plugin-react": "^7.37.5",
