Update pnpm-lock.yaml to remove obsolete dependencies and add sonner package; modify tsconfig.json for improved path mappings; refactor layout component to include Toaster for notifications.

--- a/apps/web-example/tsconfig.json
+++ b/apps/web-example/tsconfig.json
@@ -3,9 +3,10 @@
 	"compilerOptions": {
 		"baseUrl": ".",
 		"paths": {
+			"/*": ["../../*"],
 			"~/*": ["./*"],
 			"@/*": ["./src/*"],
-			"@workspace/ui/*": ["../packages/ui/src/*"]
+			"@workspace/ui/*": ["../../packages/ui/src/*"]
 		},
 		"plugins": [
 			{
