--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -24,6 +24,7 @@
 		"next-themes": "^0.4.6",
 		"react": "catalog:",
 		"react-dom": "catalog:",
+		"sonner": "^2.0.7",
 		"tailwind-merge": "^3.3.1",
 		"tw-animate-css": "^1.4.0",
 		"zod": "catalog:"
