Update .gitignore files across applications and jobs to standardize environment file handling by allowing .env.*.local files. Modify pnpm-lock.yaml to include new dependencies for better-auth and related packages, enhancing authentication capabilities. Update package.json in web-example to include better-auth dependency.

--- a/turbo.json
+++ b/turbo.json
@@ -9,11 +9,11 @@
 		"dev": {
 			"cache": false,
 			"persistent": true,
-			"inputs": ["$TURBO_DEFAULT$", ".env"]
+			"inputs": ["$TURBO_DEFAULT$", ".env", ".env.*"]
 		},
 		"build": {
 			"dependsOn": ["^build"],
-			"inputs": ["$TURBO_DEFAULT$", ".env"],
+			"inputs": ["$TURBO_DEFAULT$", ".env", ".env.*"],
 			"outputs": ["dist/**", ".next/**", "!.next/cache/**"]
 		},
 		"start": {
