--- a/apps/web-example/package.json
+++ b/apps/web-example/package.json
@@ -16,6 +16,7 @@
 	"dependencies": {
 		"@tanstack/react-query": "^5.90.2",
 		"@workspace/ui": "workspace:*",
+		"better-auth": "^1.3.27",
 		"lucide-react": "^0.544.0",
 		"next": "catalog:",
 		"next-themes": "^0.4.6",
