--- a/apps/server-example/package.json
+++ b/apps/server-example/package.json
@@ -16,6 +16,7 @@
 		"clean": "rm -rf dist .turbo node_modules"
 	},
 	"dependencies": {
+		"better-auth": "^1.3.27",
 		"elysia": "catalog:"
 	},
 	"devDependencies": {
