--- a/apps/web-example/components.json
+++ b/apps/web-example/components.json
@@ -14,7 +14,7 @@
 		"components": "@/components",
 		"hooks": "@/hooks",
 		"lib": "@/lib",
-		"utils": "@workspace/ui/lib/utils",
-		"ui": "@workspace/ui/components"
+		"utils": "@packages/ui/lib/utils",
+		"ui": "@packages/ui/components"
 	}
 }
