--- a/apps/web-example/package.json
+++ b/apps/web-example/package.json
@@ -15,17 +15,21 @@
 	},
 	"dependencies": {
 		"@tanstack/react-query": "^5.90.2",
-		"@workspace/ui": "workspace:*",
+		"@packages/ui": "workspace:*",
 		"better-auth": "^1.3.27",
+		"drizzle-orm": "^0.44.6",
 		"lucide-react": "^0.544.0",
 		"next": "catalog:",
 		"next-themes": "^0.4.6",
+		"pg": "^8.16.3",
 		"react": "catalog:",
 		"react-dom": "catalog:"
 	},
 	"devDependencies": {
 		"@types/node": "catalog:",
+		"@types/pg": "^8.15.5",
 		"@types/react": "catalog:",
-		"@types/react-dom": "catalog:"
+		"@types/react-dom": "catalog:",
+		"drizzle-kit": "^0.31.5"
 	}
 }
