--- a/apps/web-example/tsconfig.json
+++ b/apps/web-example/tsconfig.json
@@ -3,10 +3,9 @@
 	"compilerOptions": {
 		"baseUrl": ".",
 		"paths": {
-			"/*": ["../../*"],
 			"~/*": ["./*"],
 			"@/*": ["./src/*"],
-			"@workspace/ui/*": ["../../packages/ui/src/*"]
+			"@packages/ui/*": ["../../packages/ui/src/*"]
 		},
 		"plugins": [
 			{
