--- a/packages/ui/tsconfig.json
+++ b/packages/ui/tsconfig.json
@@ -3,7 +3,7 @@
 	"compilerOptions": {
 		"baseUrl": ".",
 		"paths": {
-			"@workspace/ui/*": ["./src/*"]
+			"@packages/ui/*": ["./src/*"]
 		}
 	},
 	"include": ["."],
