Update project dependencies and configurations; add @t3-oss/env-core and @t3-oss/env-nextjs to server and web examples. Modify environment files for improved variable management and refactor server code to utilize environment variables. Enhance README with setup instructions and development commands. Remove obsolete README from server-example.

--- a/apps/web-example/.env.development
+++ b/apps/web-example/.env.development
@@ -1,7 +1,8 @@
-# Server-side Base URL
-BASE_URL=http://localhost:3001
+# Client-side variables (exposed to browser)
+NEXT_PUBLIC_APP_NAME=web-example
+NEXT_PUBLIC_BASE_URL=http://localhost:3001
 
-# Database URL
+# Server-side variables
 DATABASE_URL=postgresql://web-example:web-example_password@localhost/web-example
 
 # Better Auth
