--- a/apps/server-example/package.json
+++ b/apps/server-example/package.json
@@ -16,8 +16,10 @@
 		"clean": "rm -rf dist .turbo node_modules"
 	},
 	"dependencies": {
+		"@t3-oss/env-core": "^0.13.8",
 		"better-auth": "^1.3.27",
-		"elysia": "catalog:"
+		"elysia": "catalog:",
+		"zod": "catalog:"
 	},
 	"devDependencies": {
 		"@types/bun": "catalog:"
