--- a/apps/web-example/package.json
+++ b/apps/web-example/package.json
@@ -14,8 +14,9 @@
 		"clean": "rm -rf .next .turbo node_modules"
 	},
 	"dependencies": {
-		"@tanstack/react-query": "^5.90.2",
 		"@packages/ui": "workspace:*",
+		"@t3-oss/env-nextjs": "^0.13.8",
+		"@tanstack/react-query": "^5.90.2",
 		"better-auth": "^1.3.27",
 		"drizzle-orm": "^0.44.6",
 		"lucide-react": "^0.544.0",
@@ -23,13 +24,15 @@
 		"next-themes": "^0.4.6",
 		"pg": "^8.16.3",
 		"react": "catalog:",
-		"react-dom": "catalog:"
+		"react-dom": "catalog:",
+		"zod": "catalog:"
 	},
 	"devDependencies": {
 		"@types/node": "catalog:",
 		"@types/pg": "^8.15.5",
 		"@types/react": "catalog:",
 		"@types/react-dom": "catalog:",
-		"drizzle-kit": "^0.31.5"
+		"drizzle-kit": "^0.31.5",
+		"jiti": "^2.6.1"
 	}
 }
