Refactor project structure to replace '@workspace' with '@packages' in configuration files and dependencies. Update ESLint and TypeScript configurations across applications and jobs. Remove obsolete '@workspace/shared' package and its references, streamlining the codebase. Enhance README with deployment instructions for Docker and bare metal environments.

--- a/jobs/notifications-example/package.json
+++ b/jobs/notifications-example/package.json
@@ -16,7 +16,7 @@
 		"clean": "rm -rf dist .turbo node_modules"
 	},
 	"dependencies": {
-		"@workspace/shared": "workspace:*",
+		"@packages/shared": "workspace:*",
 		"amqp-connection-manager": "catalog:",
 		"amqplib": "catalog:",
 		"zod": "catalog:"
