--- a/jobs/order-example/package.json
+++ b/jobs/order-example/package.json
@@ -7,16 +7,16 @@
 	"scripts": {
 		"build": "bun build --compile --minify --target bun --outfile ./dist/server src/index.ts",
 		"build:linux": "bun build --compile --minify --target bun-linux-x64 --outfile ./dist/server src/index.ts",
+		"clean": "rm -rf dist .turbo node_modules",
 		"dev": "bun run --watch src/index.ts",
 		"lint": "eslint .",
 		"lint:fix": "eslint . --fix",
 		"start": "./dist/server",
 		"test": "echo \"Error: no test specified\" && exit 1",
-		"type:check": "tsc --noEmit",
-		"clean": "rm -rf dist .turbo node_modules"
+		"type:check": "tsc --noEmit"
 	},
 	"dependencies": {
-		"@packages/shared": "workspace:*",
+		"@packages/events": "workspace:*",
 		"amqp-connection-manager": "catalog:",
 		"amqplib": "catalog:",
 		"zod": "catalog:"
