Add database management scripts and update task configurations in package.json and turbo.json
- Introduced new database management scripts: db:generate, db:migrate, db:push, and db:seed in package.json.
- Updated task configurations in turbo.json to include inputs and outputs for database tasks.
- Modified lint and type check tasks to specify relevant inputs.
- Corrected DATABASE_URL format in the development environment file for server-example.

--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
 	"scripts": {
 		"build": "turbo run build",
 		"clean": "turbo run clean && rm -rf .turbo node_modules",
+		"db:generate": "turbo run db:generate",
+		"db:migrate": "turbo run db:migrate",
+		"db:push": "turbo run db:push",
+		"db:seed": "turbo run db:seed",
 		"dev": "turbo run dev",
 		"format:check": "prettier --check \"**/*.{ts,tsx,js,jsx,json,md}\"",
 		"format:write": "prettier --write \"**/*.{ts,tsx,js,jsx,json,md}\"",
