--- a/apps/server-example/.env.development
+++ b/apps/server-example/.env.development
@@ -1,3 +1,3 @@
 NODE_ENV=development
 
-DATABASE_URL=postgresql://server-example:server-example_password@localhost/server-example
+DATABASE_URL=postgresql://server_example:server_example_password@localhost/server_example
