--- a/turbo.json
+++ b/turbo.json
@@ -4,16 +4,17 @@
 	"globalEnv": ["NODE_ENV"],
 	"tasks": {
 		"test": {
-			"dependsOn": ["^test"]
+			"dependsOn": ["^test"],
+			"inputs": ["src/**/*.ts", "src/**/*.tsx", "test/**/*.ts"],
+			"outputs": ["coverage/**"]
 		},
 		"dev": {
 			"cache": false,
-			"persistent": true,
-			"inputs": ["$TURBO_DEFAULT$", ".env", ".env.*"]
+			"persistent": true
 		},
 		"build": {
 			"dependsOn": ["^build"],
-			"inputs": ["$TURBO_DEFAULT$", ".env", ".env.*"],
+			"inputs": ["$TURBO_DEFAULT$", ".env*", "!.env*.example"],
 			"outputs": ["dist/**", ".next/**", "!.next/cache/**"]
 		},
 		"start": {
@@ -21,10 +22,27 @@
 			"persistent": true,
 			"dependsOn": ["^build", "build"]
 		},
-		"lint": {},
-		"type:check": {},
+		"lint": {
+			"inputs": ["src/**", "eslint.config.js", "tsconfig.json", "package.json"]
+		},
+		"type:check": {
+			"inputs": ["src/**/*.ts", "src/**/*.tsx", "test/**/*.ts", "tsconfig.json", "package.json"]
+		},
 		"clean": {
 			"cache": false
+		},
+		"db:generate": {
+			"inputs": ["src/db/schema.ts", "src/scripts/drizzle.config.ts", ".env*", "!.env*.example"],
+			"outputs": ["migrations/**"]
+		},
+		"db:migrate": {
+			"inputs": ["src/db/schema.ts", "src/scripts/drizzle.config.ts", ".env*", "!.env*.example"]
+		},
+		"db:push": {
+			"inputs": ["src/db/schema.ts", "src/scripts/drizzle.config.ts", ".env*", "!.env*.example"]
+		},
+		"db:seed": {
+			"inputs": ["src/scripts/seed.ts", "src/scripts/seed/**", "src/db/schema.ts", ".env*", "!.env*.example"]
 		}
 	}
 }
