Add auth:generate script and update README for Better Auth integration
- Introduced a new script `auth:generate` in package.json for generating authentication schemas.
- Updated README to reflect changes in database management commands, replacing pnpx with pnpm for consistency.
- Enhanced turbo.json to include task dependencies for better execution flow.

--- a/apps/web-example/package.json
+++ b/apps/web-example/package.json
@@ -4,6 +4,7 @@
 	"private": true,
 	"type": "module",
 	"scripts": {
+		"auth:generate": "dotenvx run --convention=nextjs -- pnpx @better-auth/cli@latest generate --output src/db/auth-schema.ts --config src/utils/auth.ts --yes",
 		"build": "next build",
 		"clean": "rm -rf .next .turbo node_modules",
 		"db:generate": "dotenvx run --convention=nextjs -- drizzle-kit generate --config=src/scripts/drizzle.config.ts",
