--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
 		"packages/*"
 	],
 	"scripts": {
+		"auth:generate": "turbo run auth:generate",
 		"build": "turbo run build",
 		"clean": "turbo run clean && rm -rf .turbo node_modules",
 		"db:generate": "turbo run db:generate",
@@ -14,8 +15,8 @@
 		"db:push": "turbo run db:push",
 		"db:seed": "turbo run db:seed",
 		"dev": "turbo run dev",
-		"format:check": "prettier --check \"**/*.{ts,tsx,js,jsx,json,md}\"",
-		"format:write": "prettier --write \"**/*.{ts,tsx,js,jsx,json,md}\"",
+		"format:check": "prettier --check \"**/*.{ts,tsx,js,jsx,json,md}\" --ignore-path .gitignore --ignore-pattern \"**/auth-schema.ts\"",
+		"format:write": "prettier --write \"**/*.{ts,tsx,js,jsx,json,md}\" --ignore-path .gitignore --ignore-pattern \"**/auth-schema.ts\"",
 		"lint": "turbo run lint",
 		"start": "turbo run start",
 		"test": "turbo run test",
