Integrate Better Auth UI and refactor layout for authentication
- Added `@daveyplate/better-auth-ui` dependency to enhance authentication capabilities in the web example.
- Refactored layout component to include `AuthUIProvider` for better authentication context management.
- Removed obsolete `QueryClientProvider` component to streamline the codebase.
- Updated environment configuration to maintain consistency and security.

--- a/apps/web-example/package.json
+++ b/apps/web-example/package.json
@@ -19,6 +19,7 @@
 		"type:check": "tsc --noEmit"
 	},
 	"dependencies": {
+		"@daveyplate/better-auth-ui": "^3.2.5",
 		"@packages/ui": "workspace:*",
 		"@t3-oss/env-nextjs": "^0.13.8",
 		"@tanstack/react-query": "^5.90.2",
