Integrate ElysiaJS components and enhance server example functionality
- Added dependencies for ElysiaJS components: `@elysiajs/bearer`, `@elysiajs/cors`, `@elysiajs/jwt`, `@elysiajs/openapi`, `@elysiajs/opentelemetry`, and `@elysiajs/static` to improve API capabilities.
- Updated server example to utilize ElysiaJS middleware for CORS and OpenAPI integration.
- Introduced JWT secret in the development environment for enhanced security.
- Refactored TypeScript configurations across applications to standardize paths and improve module resolution.
- Removed obsolete README file from the server example to streamline the project structure.

--- a/apps/server-example/.env.development
+++ b/apps/server-example/.env.development
@@ -1,3 +1,5 @@
 NODE_ENV=development
 
 DATABASE_URL=postgresql://server_example:server_example_password@localhost/server_example
+
+JWT_SECRET=af621babf9f489e6014724e929bb8211
