--- a/apps/server-example/package.json
+++ b/apps/server-example/package.json
@@ -20,15 +20,23 @@
 		"type:check": "tsc --noEmit"
 	},
 	"dependencies": {
+		"@elysiajs/bearer": "^1.4.1",
+		"@elysiajs/cors": "^1.4.0",
+		"@elysiajs/jwt": "^1.4.0",
+		"@elysiajs/openapi": "^1.4.11",
+		"@elysiajs/opentelemetry": "^1.4.0",
+		"@elysiajs/static": "^1.4.0",
 		"@t3-oss/env-core": "^0.13.8",
 		"drizzle-orm": "^0.44.6",
 		"elysia": "catalog:",
+		"lodash-es": "^4.17.21",
 		"pg": "^8.16.3",
 		"zod": "catalog:"
 	},
 	"devDependencies": {
 		"@dotenvx/dotenvx": "^1.51.0",
 		"@types/bun": "catalog:",
+		"@types/lodash-es": "^4.17.12",
 		"@types/pg": "^8.15.5",
 		"drizzle-kit": "^0.31.5",
 		"drizzle-seed": "^0.3.1",
