--- a/apps/server-example/tsconfig.json
+++ b/apps/server-example/tsconfig.json
@@ -1,9 +1,7 @@
 {
-	"extends": "@packages/typescript-config/base.json",
+	"extends": "@packages/typescript-config/app.json",
 	"compilerOptions": {
-		"outDir": "dist",
-		"noEmit": true,
-		"allowImportingTsExtensions": true,
+		"baseUrl": ".",
 		"paths": {
 			"@/*": ["./src/*"]
 		}
