--- a/apps/web-example/tsconfig.json
+++ b/apps/web-example/tsconfig.json
@@ -5,13 +5,8 @@
 		"paths": {
 			"@/*": ["./src/*"],
 			"@packages/ui/*": ["../../packages/ui/src/*"]
-		},
-		"plugins": [
-			{
-				"name": "next"
-			}
-		]
+		}
 	},
-	"include": ["**/*.ts", "**/*.tsx", "next-env.d.ts", "next.config.js", ".next/types/**/*.ts"],
+	"include": ["src", "next-env.d.ts", "next.config.ts", ".next/types/**/*.ts"],
 	"exclude": ["node_modules"]
 }
