--- a/jobs/payment-example/tsconfig.json
+++ b/jobs/payment-example/tsconfig.json
@@ -1,10 +1,10 @@
 {
-	"extends": "@packages/typescript-config/base.json",
+	"extends": "@packages/typescript-config/app.json",
 	"compilerOptions": {
-		"outDir": "dist",
-		"noEmit": true,
-		"allowImportingTsExtensions": true,
-		"baseUrl": "."
+		"baseUrl": ".",
+		"paths": {
+			"@/*": ["./src/*"]
+		}
 	},
 	"include": ["src"],
 	"exclude": ["dist"]
