--- a/packages/events/tsconfig.json
+++ b/packages/events/tsconfig.json
@@ -4,6 +4,6 @@
 		"outDir": "dist",
 		"baseUrl": "."
 	},
-	"include": ["src/**/*"],
+	"include": ["src"],
 	"exclude": ["node_modules", "dist"]
 }
