--- a/packages/typescript-config/app.json
+++ b/packages/typescript-config/app.json
@@ -2,11 +2,9 @@
 	"$schema": "https://json.schemastore.org/tsconfig",
 	"extends": "./base.json",
 	"compilerOptions": {
-		"plugins": [{ "name": "next" }],
-		"jsx": "preserve",
-		"allowJs": true,
 		"noEmit": true,
 		"declaration": false,
-		"declarationMap": false
+		"declarationMap": false,
+		"allowImportingTsExtensions": true
 	}
 }
