Add @packages/cluster integration and refactor server and order examples for clustered service management
- Integrated @packages/cluster for improved service management in both server and order examples.
- Refactored service startup and shutdown logic to utilize the new clustered service approach, enhancing scalability and maintainability.
- Updated package.json files to include @packages/cluster as a dependency in relevant applications and jobs.
- Improved logging for worker lifecycle events to provide better visibility during execution.

--- a/apps/server-example/package.json
+++ b/apps/server-example/package.json
@@ -26,6 +26,7 @@
 		"@elysiajs/openapi": "^1.4.11",
 		"@elysiajs/opentelemetry": "^1.4.0",
 		"@elysiajs/static": "^1.4.0",
+		"@packages/cluster": "workspace:*",
 		"@t3-oss/env-core": "^0.13.8",
 		"drizzle-orm": "^0.44.6",
 		"elysia": "catalog:",
