Integrate @packages/cluster in notifications and payment examples for clustered service management
- Added @packages/cluster as a dependency in both notifications and payment examples to facilitate clustered service initialization.
- Refactored service startup logic to utilize the new clustered service approach, enhancing scalability and maintainability.
- Updated package.json files and pnpm-lock.yaml to reflect the new dependency structure and ensure proper linking.

--- a/packages/cluster/package.json
+++ b/packages/cluster/package.json
@@ -8,6 +8,8 @@
 	},
 	"scripts": {
 		"clean": "rm -rf .turbo node_modules",
+		"lint": "eslint .",
+		"lint:fix": "eslint . --fix",
 		"type:check": "tsc -p tsconfig.json --noEmit"
 	}
 }
